Update graphics state when applying color. Optimize painting of rectangles where possible to reduce file sizes. Some generics and FindBugs fixes.
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@1095887 13f79535-47bb-0310-9956-ffa450edef68